# PageRank

./: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  MatrixOperations.cpp  MatrixOperations.h  MatrizRala.cpp  MatrizRala.h  Mediciones.cpp  Mediciones.h  README.md  ReadWrite.cpp  ReadWrite.h  VectorOperations.cpp  VectorOperations.h  test.txt  tp1.cpp
informe/: discusion.tex  informe.tex
